--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 body {
-    background-color:cadetblue
+    background-color:royalblue;
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+.hide{
+    display: none;
 }
