fixed loop through questions and timer

--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
     background-color:royalblue;
     text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: xx-large;
+    font-weight: bolder;
 }
 .hide{
     display: none;
